--- a/style.css
+++ b/style.css
@@ -3,10 +3,6 @@ html { box-sizing: border-box; }
 
 *, ::after, ::before { box-sizing: inherit; }
 
-body {
-    text-rendering: optimizeLegibility;
-}
-
 /*
  BARVY
  svetle sede pozadi      #f5f5f5
@@ -24,4 +20,48 @@ body {
  border-radius: 30px;
 */
 
-/* ----- zde zacni psat vlastni css ----- */
+body {
+    text-rendering: optimizeLegibility;
+    font-family: 'Rubik', sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    
+}
+.detaily{
+    max-width: 335px;
+}
+
+h1{font-size: 20px;
+    font-weight: 500;
+    text-transform: uppercase;
+    padding: 30px 30px 0 30px;
+}
+
+.produkt{ color: grey;
+    padding: 0 30px 30px 30px;
+}
+
+.popis {padding: 0 30px 30px 30px;
+    border-bottom: solid 2px #06d7c1;
+}
+
+.parametr{text-transform: uppercase;
+    font-size: 14px;
+    font-weight: 400px;
+    padding: 30px 30px 0 30px;
+}
+
+ul{ padding: 0 30px 30px 30px;
+}
+
+li{
+    display: inline-block;
+    margin: 10px;
+}
+
+.vybrana{
+    color: #f15f42;
+    padding: 10px;
+    border: solid 1px #f15f42;
+    border-radius: 50%;
+}
