--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h1{font-size: 20px;
     text-transform: uppercase;
 }
 
-.produkt{ color: grey;
+.produkt{ color:#959595;
 }
 
 .popis {
@@ -81,4 +81,24 @@ li{
     text-transform: uppercase;
     color: #f5f5f5;
     
+}
+
+.vizual {color: #f5f5f5;
+    background-image: linear-gradient(#06d7c1, #50cc49);
+    max-width: 335px;
+    border: solid 5px green;
+    padding: 30px;
+}
+
+.slogan{font-size: 16px;
+font-weight: 500;}
+
+.cena{font-size: 28px;
+font-weight: 500;
+text-align: right;
+}
+
+.zaruka{font-size: 12px;
+font-weight: 400;
+text-align: right
 }
