--- a/style.css
+++ b/style.css
@@ -22,15 +22,24 @@ html { box-sizing: border-box; }
 
 body {
     text-rendering: optimizeLegibility;
+    background-color: #f5f5f5;;
     font-family: 'Rubik', sans-serif;
     font-size: 14px;
     font-weight: 400;
+    padding: 100px;
     
 }
 .detaily{
-    max-width: 335px;
-    border: solid 5px rebeccapurple;
+    width: 335px;
+    height: 440px;
+    /*border: solid 5px rebeccapurple;*/
+    border-radius: 0 10px 10px 0;
+    background-color: white;
     padding: 30px;
+    margin: auto;
+    position: relative;
+    left: 335px;
+    top: -440px;
 }
 
 h1{font-size: 20px;
@@ -42,7 +51,7 @@ h1{font-size: 20px;
 }
 
 .popis {
-    padding: 30px 0;
+    padding: 10px 0 30px 0;
     border-bottom: solid 1px #06d7c1;
 }
 
@@ -57,7 +66,7 @@ ul{ padding: 0 30px 30px 0;
 
 li{
     display: inline-block;
-    margin: 7px;
+    margin-right: 17px;
 }
 
 .vybrana{
@@ -73,26 +82,37 @@ li{
     border-radius: 10px;
     width: 133px;
     min-height: 40px;
-    padding: 15px 30px;
+    padding: 13px 30px;
 }
 
 .tlacitko{    
     text-decoration: none;
     text-transform: uppercase;
-    color: #f5f5f5;
-    
+    color:white;
 }
 
-.vizual {color: #f5f5f5;
+.vizual {
+    color: white;
     background-image: linear-gradient(#06d7c1, #50cc49);
-    max-width: 335px;
-    border: solid 5px green;
+    width: 335px;
+    height: 440px;
+    /*border: solid 5px green;*/
+    border-radius: 10px 0 0 10px;
     padding: 30px;
+    margin: auto;
+    position: relative;
+    z-index: -1;
 }
 
 .slogan{font-size: 16px;
-font-weight: 500;}
-
+    font-weight: 500;
+    padding-top: 30px;
+}
+.cenovka{
+    position: relative;
+    top: -90px;
+    z-index: 0;
+}
 .cena{font-size: 28px;
 font-weight: 500;
 text-align: right;
@@ -100,5 +120,12 @@ text-align: right;
 
 .zaruka{font-size: 12px;
 font-weight: 400;
-text-align: right
+text-align: right;
+}
+
+.bota img{float: right;
+    position: relative;
+    left: 30px;
+    top: -10px;
+    z-index: 0;
 }
